--- a/tarea-3/styles/estilos.css
+++ b/tarea-3/styles/estilos.css
@@ -1,11 +1,14 @@
 html {
     background-color: green;
     font-size: 20px;
-    }
-    ul {
-    background: red;padding: 10px;
+}
+
+ul {
+    background: red;
+    padding: 10px;
     border: 1px solid black;
-    }
-    li {
+}
+
+li {
     margin-left: 20px;
-    }
+}
