--- a/practica-7/styles/estilos.css
+++ b/practica-7/styles/estilos.css
@@ -63,28 +63,27 @@ div.one h2 {
 }
 
 section {
-    background-color: white;
+    background: transparent;
     width: 550px;
     height: 300px;
     margin-top: 110px;
     margin-left: 160px;
 }
 
-div.atu{
-    background-color: blueviolet;
+div.atu {
+    background: rgba(255, 255, 255, .5);
     height: 250px;
 }
 
 section h2 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: black;
-    font-size: 1.5em;
-    background-color: blue;
+    font-size: 1.6em;
+    background: rgba(255, 255, 255, .4);
     width: 535px;
     height: 50px;
-    padding-top: 15px;
+    padding-top: 20px;
     padding-left: 15px;
-    
 
 }
 
@@ -101,23 +100,29 @@ div.aty p {
     padding-top: 15px;
     padding-left: 15px;
     padding-bottom: 15px;
-    background-color: black;
-    opacity: .4;
+    background: rgba(0, 0, 0, .5);
     margin-top: -20px;
 
 }
 
 div.two footer {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-top: -20px;
     height: 35px;
     padding-top: 25px;
     padding-left: 55px;
     padding-bottom: 15px;
-    background-color: pink;
-    font-size: 1em;
-
+    background-color: white;
+    font-size: 1.2em;
 }
 
+a {
+    color: royalblue;
+    text-decoration-color: darkgrey;
+    text-decoration-style: dotted;
+    text-underline-offset: 5px;
+    t
+}
 
 /*section{
     background-color: plum;
@@ -142,8 +147,6 @@ div.two{
 }
 
 */
-
-
 
 /*ddddarticle{
     background-color: white;
