--- a/practica-7/styles/estilos.css
+++ b/practica-7/styles/estilos.css
@@ -13,7 +13,6 @@ nav {
     padding: 0;
 }
 
-
 @font-face {
     font-family: 'SixCaps';
     font-style: normal;
@@ -21,12 +20,6 @@ nav {
     src: url('../fonts/SixCaps-Regular.ttf') format("truetype");
 }
 
-/*body {
-    height: 100%;
-    background-repeat: no-repeat;
-    background: url(../images/art-background4.jpg) no-repeat center center fixed;
-    background-size: 100% 100%;
-}*/
 
 header {
     background: white;
@@ -121,8 +114,16 @@ a {
     text-decoration-color: darkgrey;
     text-decoration-style: dotted;
     text-underline-offset: 5px;
-    t
 }
+
+/*-----------EXTRAS--------------*/
+
+/*body {
+    height: 100%;
+    background-repeat: no-repeat;
+    background: url(../images/art-background4.jpg) no-repeat center center fixed;
+    background-size: 100% 100%;
+}*/
 
 /*section{
     background-color: plum;
